Add new doc on ports. Clean up service discovery page.

--- a/docs/_layouts/docs.html
+++ b/docs/_layouts/docs.html
@@ -120,6 +120,11 @@ layout: default
         </a>
       </li>
       <li>
+        <a href="{{ site.baseurl }}/docs/ports.html">
+          Ports
+        </a>
+      </li>
+      <li>
         <a href="{{ site.baseurl }}/docs/native-docker-private-registry.html">
           Private Docker Registries
         </a>
